# sandbox--duckdb

./: README.md  main.ipynb  pyproject.toml
